# car-booking-api-rust

./: .env.docker  Cargo.toml  Dockerfile  Dockerfile.cache  README.md  docker-compose.yml
migrations/2023-05-28-130023_car-booking-api/: down.sql  up.sql
src/: README.md  main.rs  schema.rs
src/api/: mod.rs
src/api/routes/: app.rs
src/api/v1/: mod.rs
src/api/v1/car/: car_controller.rs  car_model.rs  car_repository.rs  car_routes.rs  car_service.rs  mod.rs
src/api/v1/user/: mod.rs  user.model.rs  user_controller.rs  user_model.rs  user_routes.rs  user_service.rs
src/auth/: auth.rs  claim.rs  claims.rs  hash copy.rs  hash.rs  jwt.rs  mod.rs  toke.rs  token_claims.rs  tt.rs
src/config/: app.rs  constants.rs  db.rs  env.rs  logger.rs  mod.rs
src/database/: db.rs
src/doc/: swagger.rs
src/exceptions/: actix.rs  error.rs  error_handlers.rs  types.rs
src/loaders/: load.rs  startup.rs
src/middleware/: app_state.rs  state.rs
src/middlewares/: app_state.rs  auth.rs  cors.rs  mod.rs  state.rs
src/utils/: api.rs  email_sender.rs  mod.rs  redis_utils.rs  response.rs  response_manager.rs  token.rs  tokke.rs  uuid.rs
