[package]
name = "car-booking-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.163", features = ["derive"] }
# A library to generate and parse UUIDs.
uuid = { version = "1.3.3", features = ["serde", "v4"] }
# Date and time library for Rust
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.6.4"
jsonwebtoken = "8.3.0"
validator = "0.16.0"
validator_derive = "0.16.0"
# for colored output
colored = "2"
totp-rs = { version = "5", features = ["base64", "qr"] }
# A JSON serialization file format
serde_json = { version = "1.0" }

# derive(Error)
thiserror = { version = "1.0" }

# hash passwords
argon2 = "0.5.0"
